# diffusion2D

./: README.md  pyproject.toml
vangasa_diffusion2d/: diffusion2d.py  output.py
