[build-system]
requires = ["setuptools","wheel","build"]

[project]
name = "vangasa_diffusion2d"
description = "A Python package for 2D heat diffusion simulation"
version = "0.0.2"
authors = [
	{name="Saranya Vanga", email="vangasaranya1289@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.6"
keywords = ["solver" ,"diffusion2D"]
classifiers = [
	"Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
	"numpy",
    "matplotlib",
]
